# tracing-logfmt-otel

./: Cargo.toml  README.md
.github/workflows/: publish.yaml  rust-ci.yml
src/: formatter.rs  lib.rs  serializer.rs
src/formatter/: builder.rs
