[package]
name = "tracing-logfmt-otel"
version = "0.4.2"
edition = "2021"
authors = [
  "ElKowar <mail@elkowar.dev>",
  "Embark <opensource@embark-studios.com>",
]
license = "MIT OR Apache-2.0"
description = "A fork of tracing-logfmt with added support for opentelemetry span data"
homepage = "https://github.com/elkowar/tracing-logfmt"
repository = "https://github.com/elkowar/tracing-logfmt"
keywords = ["logging", "tracing", "opentelemetry"]
readme = "README.md"

[dependencies]
nu-ansi-term = { version = "0.50", optional = true }
opentelemetry = "0.31.0"
time = { version = "0.3.37", features = ["formatting"] }
tracing = "0.1"
tracing-core = "0.1"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }

[features]
ansi_logs = ["dep:nu-ansi-term"]

[dev-dependencies]
opentelemetry_sdk = "0.31.0"
